--- a/src/componentes - stock/celulares.css
+++ b/src/componentes - stock/celulares.css
@@ -77,7 +77,9 @@
     height: 100%;
     object-fit: cover;
     z-index: -1;
+    pointer-events: none; /* Evitar que el video reaccione a eventos de ratón y táctiles */
 }
+
 
 h3 {
     background-color: #0d0553;
