--- a/src/componentes - stock/listadocelulares.css
+++ b/src/componentes - stock/listadocelulares.css
@@ -1,4 +1,3 @@
-
 .lista-celulares {
     display: flex;
     background-color: #333;
@@ -12,7 +11,6 @@
     background-color: #1f113e;
     padding: 10px;
 }
-
 
 .celular {
     width: 200px; /* Ancho de cada celular */
@@ -63,4 +61,12 @@
     background-color: #00901a;
 }
 
+@media (max-width: 768px) {
+    .contenedor-general {
+        justify-content: center; /* Centrar los elementos en dispositivos móviles */
+    }
 
+    .celular {
+        width: calc(50% - 20px); /* Ancho del celular para que haya dos en una fila, con un margen de 10px a cada lado */
+    }
+}
